impl'd LibrarayInfoCacheTest
Signed-off-by: Andre Dietisheim <adietish@redhat.com>